--- a/code-samples/eventing/bookstore-sample-app/bookstore-eda/config/100-deployment.yaml
+++ b/code-samples/eventing/bookstore-sample-app/bookstore-eda/config/100-deployment.yaml
@@ -19,3 +19,16 @@ spec:
         image: quay.io/rh-ee-leoli/eda:latest
         ports:
         - containerPort: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: eda-service
+spec:
+  selector:
+    app: eda
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+  type: LoadBalancer
