--- a/config/nav.yml
+++ b/config/nav.yml
@@ -277,17 +277,17 @@ nav:
         - Configuring logging: eventing/observability/logging/config-logging.md
         - Collecting metrics: eventing/observability/metrics/collecting-metrics.md
         - Knative Eventing metrics: eventing/observability/metrics/eventing-metrics.md
-      - Experimental Features:
-        - About Eventing experimental features: eventing/experimental-features/README.md
-        - DeliverySpec.Timeout field: eventing/experimental-features/delivery-timeout.md
-        - DeliverySpec.RetryAfterMax field: eventing/experimental-features/delivery-retryafter.md
-        - New Trigger Filters: eventing/experimental-features/new-trigger-filters.md
+      - Features:
+        - About Eventing features: eventing/features/README.md
+        - DeliverySpec.Timeout field: eventing/features/delivery-timeout.md
+        - DeliverySpec.RetryAfterMax field: eventing/features/delivery-retryafter.md
+        - New Trigger Filters: eventing/features/new-trigger-filters.md
         - New APIServerSource Filters: eventing/experimental-features/new-apiserversource-filters.md
-        - KReference.Group field: eventing/experimental-features/kreference-group.md
-        - Knative reference mapping: eventing/experimental-features/kreference-mapping.md
-        - EventType auto creation: eventing/experimental-features/eventtype-auto-creation.md
-        - Transport Encryption: eventing/experimental-features/transport-encryption.md
-        - Sender Identity: eventing/experimental-features/sender-identity.md
+        - KReference.Group field: eventing/features/kreference-group.md
+        - Knative reference mapping: eventing/features/kreference-mapping.md
+        - EventType auto creation: eventing/features/eventtype-auto-creation.md
+        - Transport Encryption: eventing/features/transport-encryption.md
+        - Sender Identity: eventing/features/sender-identity.md
       - FAQ: eventing/faq/README.md
     # Eventing reference docs
       - Reference:
