Add SubscriptionsAPI filters to APIServerSource (#5916)
* Add SubscriptionsAPI filters to APIServerSource

This MR adds a page for the experimental feature that
add `filters` to the APIServerSource kind.

Related to #7799 and #7791

Signed-off-by: Hector Martinez <hemartin@redhat.com>

* MR suggestion

Co-authored-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

---------

Signed-off-by: Hector Martinez <hemartin@redhat.com>
Co-authored-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -282,6 +282,7 @@ nav:
         - DeliverySpec.Timeout field: eventing/experimental-features/delivery-timeout.md
         - DeliverySpec.RetryAfterMax field: eventing/experimental-features/delivery-retryafter.md
         - New Trigger Filters: eventing/experimental-features/new-trigger-filters.md
+        - New APIServerSource Filters: eventing/experimental-features/new-apiserversource-filters.md
         - KReference.Group field: eventing/experimental-features/kreference-group.md
         - Knative reference mapping: eventing/experimental-features/kreference-mapping.md
         - EventType auto creation: eventing/experimental-features/eventtype-auto-creation.md
