--- a/code-samples/eventing/bookstore-sample-app/node-server/config/300-sinkbinding.yaml
+++ b/code-samples/eventing/bookstore-sample-app/node-server/config/300-sinkbinding.yaml
@@ -1,7 +1,7 @@
 apiVersion: sources.knative.dev/v1
 kind: SinkBinding
 metadata:
-  name: frontend-sinkbinding-nodejs-server
+  name: node-sinkbinding
   namespace: default
 spec:
   subject:
@@ -9,9 +9,9 @@ spec:
     kind: Deployment
     selector:
       matchLabels:
-        app: bookstore-frontend
+        app: node-server
   sink:
     ref:
-      apiVersion: serving.knative.dev/v1
-      kind: Service
-      name: knative-eda
+      apiVersion: eventing.knative.dev/v1
+      kind: Broker
+      name: bookstore-broker
