--- a/code-samples/eventing/bookstore-sample-app/frontend/config/100-front-end-deployment.yaml
+++ b/code-samples/eventing/bookstore-sample-app/frontend/config/100-front-end-deployment.yaml
@@ -24,7 +24,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookstore-frontend-service
+  name: bookstore-frontend-svc
 spec:
   ports:
     - port: 3000
