--- a/code-samples/eventing/bookstore-sample-app/node-server/config/100-event-display.yaml
+++ b/code-samples/eventing/bookstore-sample-app/node-server/config/100-event-display.yaml
@@ -1,9 +1,34 @@
-apiVersion: serving.knative.dev/v1
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: event-display
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: event-display
+  template:
+    metadata:
+      labels:
+        app: event-display
+    spec:
+      containers:
+        - name: event-display
+          image: gcr.io/knative-releases/knative.dev/eventing-contrib/cmd/event_display
+          ports:
+            - containerPort: 8080
+
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: event-display
 spec:
-  template:
-    spec:
-      containers:
-        - image: gcr.io/knative-releases/knative.dev/eventing-contrib/cmd/event_display
+  selector:
+    app: event-display
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: ClusterIP
