--- a/code-samples/eventing/bookstore-sample-app/node-server/config/200-broker.yaml
+++ b/code-samples/eventing/bookstore-sample-app/node-server/config/200-broker.yaml
@@ -3,24 +3,26 @@ kind: Broker
 metadata:
   name: bookstore-broker
 
+
 ---
 # This Trigger subscribes to the Broker and filters events based on the type and badwordfilter attribute.
 # Those comments that contain insults are filtered out by the badwordfilter attribute and they will be redirected to the event-display Service.
 apiVersion: eventing.knative.dev/v1
 kind: Trigger
 metadata:
-  name: seq-reply-trigger
+  name: temp-trigger
 spec:
   broker: bookstore-broker
   filter:
     attributes:
-      type: moderated-comment # This is the filter that will be applied to the event, only events with the ce-type moderated-comment will be processed
-      badwordfilter: bad # This is the filter that will be applied to the event, only events with the ce-extension badwordfilter: bad will be processed
+      type: new-review-comment # This is the filter that will be applied to the event, only events with the ce-type new-review-comment will be processed
   subscriber:
     ref:
-      apiVersion: serving.knative.dev/v1
-      kind: Service
+      apiVersion: apps/v1
+      kind: Deployment
       name: event-display
+
+
 
 ---
 apiVersion: eventing.knative.dev/v1
@@ -30,12 +32,12 @@ metadata:
 spec:
   broker: bookstore-broker
   filter:
-    attributes:
-      type: moderated-comment
-      badwordfilter: good
+    attributes: # Trigger will filter events based on BOTH the type and badwordfilter attribute
+      type: moderated-comment # This is the filter that will be applied to the event, only events with the ce-type moderated-comment will be processed
+      badwordfilter: good # This is the filter that will be applied to the event, only events with the ce-extension badwordfilter: good will be processed
   subscriber:
     ref:
       apiVersion: v1
       kind: Service
       name: node-server-svc
-    uri: /insert
+    uri: /insert # This is the path where the event will be sent to the subscriber, see /insert in node-server code: index.js
