--- a/config/nav.yml
+++ b/config/nav.yml
@@ -316,6 +316,7 @@ nav:
       - Case studies:
         - List of Case Studies: about/case-studies/README.md
         - deepc: about/case-studies/deepc.md
+        - IBM: about/case-studies/ibm.md
         - Outfit7: about/case-studies/outfit7.md
         - Puppet: about/case-studies/puppet.md
         - PNC Bank: about/case-studies/pnc.md
