--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -47,6 +47,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
+          - articles/knative-meets-apache-camel.md
           - articles/knative-backstage-plugins.md
           - articles/demystifying-activator-on-path.md
           - articles/knative-eventing-vision.md
