--- a/code-samples/eventing/bookstore-sample-app/solution/node-server/config/200-broker.yaml
+++ b/code-samples/eventing/bookstore-sample-app/solution/node-server/config/200-broker.yaml
@@ -18,8 +18,8 @@ spec:
       type: new-review-comment # This is the filter that will be applied to the event, only events with the ce-type new-review-comment will be processed
   subscriber:
     ref:
-      apiVersion: apps/v1
-      kind: Deployment
+      apiVersion: v1
+      kind: Service
       name: event-display
 
 
