--- a/config/nav.yml
+++ b/config/nav.yml
@@ -46,12 +46,16 @@ nav:
           - Clean Up: getting-started/clean-up.md
         - "E2E tutorial: Knative Bookstore":
             - Overview: bookstore/page-0/page-0-intro.md
+            - Disclaimer: bookstore/disclaimer/README.md
             - Environment Setup: bookstore/page-0.5/pg0.5-env-setup.md
             - 1 - Send Review Comment to Broker: bookstore/page-1/pg1-review-svc-1.md
             - 2 - Create Sentiment Analysis Service: bookstore/page-2/pg2-sentiment-svc.md
             - 3 - Create Bad Word Service: bookstore/page-3/pg3-badword-svc.md
             - 4 - Create Sequence: bookstore/page-4/pg4-sequence.md
             - 5 - Create DB service: bookstore/page-5/pg5-db-svc.md
+            - 6 - Advanced event filtering: bookstore/page-6/pg6-review-svc-2.md
+            - 7 - Connect Slack via Camel-K: bookstore/page-7/pg7-slack-camel.md
+            - 8 - Extra Challenges: bookstore/extra-challenge/README.md
 ###############################################################################
     # Installing
 ###############################################################################
