--- a/.github/workflows/knative-docs-image.yaml
+++ b/.github/workflows/knative-docs-image.yaml
@@ -5,6 +5,8 @@ on:
     branches: ['main']
     paths:
     - "code-samples/serving/hello-world/helloworld-go/**"
+    - "code-samples/eventing/bookstore-sample-app/solution/frontend/**"
+    - "code-samples/eventing/bookstore-sample-app/solution/node-server/**"
     - "docs/serving/autoscaling/autoscale-go/**"
     - "hack/docker/**"
     - ".github/workflows/knative-docs-image.yaml"
