fix: Update the image to use the one from official knative release build

--- a/code-samples/eventing/bookstore-sample-app/solution/frontend/config/100-front-end-deployment.yaml
+++ b/code-samples/eventing/bookstore-sample-app/solution/frontend/config/100-front-end-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: bookstore-frontend
-          image: quay.io/rh-ee-leoli/bookstore-frontend:latest
+          image: ghcr.io/knative/bookstore-frontend:latest
           ports:
             - containerPort: 3000
 
