feat: add intro blog on LLM agents (#6056)
* feat: add intro blog on LLM agents

Signed-off-by: Calum Murray <cmurray@redhat.com>

* fix: llm agents article is listed in the nav for the blog

Signed-off-by: Calum Murray <cmurray@redhat.com>

* fix: formatting of lists

Signed-off-by: Calum Murray <cmurray@redhat.com>

* feat: try using a figure for image centering

Signed-off-by: Calum Murray <cmurray@redhat.com>

* Address review comments by @matzew

- Fix image rendering
- Add link to chat API

Signed-off-by: Calum Murray <cmurray@redhat.com>

* fix: small grammar fixes

Signed-off-by: Calum Murray <cmurray@redhat.com>

* fix: add cncf slack link

Signed-off-by: Calum Murray <cmurray@redhat.com>

---------

Signed-off-by: Calum Murray <cmurray@redhat.com>

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -47,6 +47,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
+          - articles/llm-agents-overview.md
           - articles/cross-namespace-event-links-feature.md
           - articles/aws_to_func_migration.md
           - articles/consuming_s3_data_with_knative.md
