--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -81,6 +81,7 @@ nav:
           - articles/knative-v0-3-autoscaling-a-love-story.md
           - articles/ko-fast-kubernetes-microservice-development-in-go.md
           - articles/build-deploy-manage-modern-serverless-workloads-using-knative-on-kubernetes.md
+          - articles/introduce-mqtt-source.md
       - Steering Committee:
           - steering/2024-02-14-trademark-committee-dissolved.md
           - steering/toc-2022-election-announcement.md
