--- a/config/nav.yml
+++ b/config/nav.yml
@@ -304,6 +304,7 @@ nav:
         - Transport Encryption: eventing/features/transport-encryption.md
         - Sender Identity: eventing/features/sender-identity.md
         - Eventing with Istio: eventing/features/istio-integration.md
+        - Cross Namespace Event Links: eventing/features/cross-namespace-event-links.md
       - FAQ: eventing/faq/README.md
     # Eventing reference docs
       - Reference:
